--- a/src/config.json.example
+++ b/src/config.json.example
@@ -5,5 +5,6 @@
     "passwd": "my secret password",
     "db": "factoStats"
   },
-  "botToken": "default_NDQ1NDAzODasdffMTUzNDc1.XTjpiA.Oxkzzeas_MOCK_adfasdfG0jr_zQ"
+  "botToken": "default_NDQ1NDAzODasdffMTUzNDc1.XTjpiA.Oxkzzeas_MOCK_adfasdfG0jr_zQ",
+  "cogs_dir": "cogs"
 }
